fix: avoid unclickable links by setting a z-index

--- a/app/assets/stylesheets/header.css.scss
+++ b/app/assets/stylesheets/header.css.scss
@@ -41,6 +41,7 @@
 
 .personallinks {
   float:right;
+  z-index:1;
 
   li {
     margin-right: 1em;
